--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -32,7 +32,7 @@
             <div class="text-center mb-4">
                 <img src="{% static 'users/images/Sekunder.png'  %}" alt="logo smk telkom bandung" width="125vh" />
                 <h1 class="h3 my-3 font-weight-normal judul">Login Primaseru</h1>
-                <p class="text-muted">Jika belum mempunyai akun atau ingin <b>mendaftar</b> di <b>SMK Telkom Bandung</b> silahkan klik <a href="https://bit.ly/InfoPPDBSMKTelBdg9">disini.</a></p>
+                <p class="text-muted">Jika belum mempunyai akun atau ingin <b>mendaftar</b> di <b>SMK Telkom Bandung</b> silahkan klik <a href="{% url 'register' %}">disini.</a></p>
             </div>
 
             <div class="form-label-group">
