--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -45,7 +45,11 @@
                             <li class="nav-item mx-2">
                                 <a class="nav-link" href="#section-8">Biaya</a>
                             </li>
-                            {% if user.is_authenticated %}
+                            {% if user.is_staff %}
+                                <li class="nav-item mx-2">
+                                    <a class="nav-link my-btn-primary py-2 px-3 text-white" href="{% url 'dashboard' %}">Dashboard</a>
+                                </li>
+                            {% elif user.is_authenticated %}
                                 <li class="nav-item mx-2">
                                     <a class="nav-link my-btn-primary py-2 px-3 text-white" href="{% url 'profile' %}">Profile</a>
                                 </li>
