changes icon in the dashboard

--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -38,7 +38,7 @@
                     <h3 class="judul">Daftar Calon Murid</h3>
                 </div>
                 <div class="col d-flex justify-content-end align-items-start">
-                    <a class="btn btn-sm btn-outline-danger mt-1" href="{% url 'export-participant' %}">Export</a>
+                    <a class="btn btn-sm btn-outline-danger mt-1" href="{% url 'export' %}">Export</a>
                 </div>
             </div>
             <div class="table-responsive-md mt-2">
