--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -172,60 +172,14 @@
             <div class="row justify-content-center">
                 <div class="col-lg-12 col-12">
                     <div class="timeline">
-                        <div class="container-tl left">
-                            <h1 class="icon">1</h1>
+                        {% for s in step %}
+                        <div class="container-tl {% if forloop.counter|divisibleby:2 %}right{% else %}left{% endif %}">
+                            <h1 class="icon">{{ forloop.counter  }}</h1>
                             <div class="content">
                                 <h2>Pendaftaran (Online atau Offline)</h2>
                             </div>
                         </div>
-                        <div class="container-tl right">
-                            <h1 class="icon">2</h1>
-                            <div class="content">
-                                <h2>Membayar Biaya Pendaftaran</h2>
-                            </div>
-                        </div>
-                        <div class="container-tl left">
-                            <h1 class="icon">3</h1>
-                            <div class="content">
-                                <h2>Mengisi Formulir</h2>
-                            </div>
-                        </div>
-                        <div class="container-tl right">
-                            <h1 class="icon">4</h1>
-                            <div class="content">
-                                <h2>Melengkapi Berkas</h2>
-                            </div>
-                        </div>
-                        <div class="container-tl left">
-                            <h1 class="icon">5</h1>
-                            <div class="content">
-                                <h2>Menentukan Jadwal Tes</h2>
-                            </div>
-                        </div>
-                        <div class="container-tl right">
-                            <h1 class="icon">6</h1>
-                            <div class="content">
-                                <h2>Melaksanakan Tes</h2>
-                            </div>
-                        </div>
-                        <div class="container-tl left">
-                            <h1 class="icon">7</h1>
-                            <div class="content">
-                                <h2>Pengumuman Hasil Tes</h2>
-                            </div>
-                        </div>
-                        <div class="container-tl right">
-                            <h1 class="icon">8</h1>
-                            <div class="content">
-                                <h2>Membayar Biaya Daftar Ulang</h2>
-                            </div>
-                        </div>
-                        <div class="container-tl left">
-                            <h1 class="icon">9</h1>
-                            <div class="content">
-                                <h2>Mengisi Formulir Daftar Ulang</h2>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
