implement school name suggestion

--- a/homepage/templates/homepage/register.html
+++ b/homepage/templates/homepage/register.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="{% static 'homepage/css/primaseru.css' %}" type="text/css" media="screen" />
     <link rel="stylesheet" href="{% static 'homepage/css/register.css' %}" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{% static 'css/school-list.css' %}" type="text/css" media="screen" />
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
@@ -64,4 +65,5 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <script type="text/javascript" src="{% static 'js/datepicker.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/schoolList.js' %}"></script>
 {% endblock js %}
