--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -173,10 +173,10 @@
                 <div class="col-lg-12 col-12">
                     <div class="timeline">
                         {% for s in step %}
-                        <div class="container-tl {% if forloop.counter|divisibleby:2 %}right{% else %}left{% endif %}">
+                        <div class="container-tl {% if forloop.counter|divisibleby:2 %}right {% else %}left text-right{% endif %}">
                             <h1 class="icon">{{ forloop.counter  }}</h1>
                             <div class="content">
-                                <h2>Pendaftaran (Online atau Offline)</h2>
+                                <h2>{{ s.step  }}</h2>
                             </div>
                         </div>
                         {% endfor %}
