add aos and minor changes

--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -32,7 +32,7 @@
                         <div class="hamburger-line"></div>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ml-auto align-items-center">
+                        <ul class="navbar-nav ml-auto align-items-start align-items-lg-center">
                             <li class="nav-item mx-2">
                                 <a class="nav-link" href="#section-2">Jurusan</a>
                             </li>
