--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="{% static 'homepage/css/primaseru.css' %}" type="text/css" media="screen" />
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 {% endblock head %}
 {% block container %}
 {% endblock container %}
@@ -15,13 +16,15 @@
         <div class="container">
             <div class="row justify-content-center align-items-center text-center text-lg-left">
                 <div class="col-lg-6 col-md-10">
-                    <span>Penerimaan Siswa Baru (PRIMASERU)</span>
-                    <h1 class="font-weight-bold">Achieve Your Dream <span class="red-text">With Us</span></h1>
-                    <p class="mb-5 mt-3">Sekolah Berbasis Teknologi Informasi dan Komunikasi Terbaik 3 di Jawa Barat Tahun 2019, UNBK Terbaik di Kabupaten Bandung Tahun 2016 dan 2019. Program Asrama, Patriot dan Tahfizh.</p>
-                    <a href="{% url 'register' %}" class="my-btn-primary">Daftar Sekarang</a>
+                    <span class="d-block" data-aos="fade-down">Penerimaan Siswa Baru (PRIMASERU)</span>
+                    <h1 class="font-weight-bold" data-aos="fade-right" data-aos-delay="200">Achieve Your Dream <span class="red-text">With Us</span></h1>
+                    <div data-aos="fade-up" data-aos-delay="400">
+                        <p class="mb-5 mt-3">Sekolah Berbasis Teknologi Informasi dan Komunikasi Terbaik 3 di Jawa Barat Tahun 2019, UNBK Terbaik di Kabupaten Bandung Tahun 2016 dan 2019. Program Asrama, Patriot dan Tahfizh.</p>
+                        <a href="{% url 'register' %}" class="my-btn-primary">Daftar Sekarang</a>
+                    </div>
                 </div>
                 <div class="col-lg-6 col-md-10 mt-5 mt-lg-0">
-                    <img loading="lazy" class="w-100" src="{% static 'homepage/images/hero-img.jpg' %}" alt="hero image">
+                    <img loading="lazy" data-aos="fade-left" data-aos-delay="600" class="w-100" src="{% static 'homepage/images/hero-img.jpg' %}" alt="hero image">
                 </div>
             </div>
         </div>
@@ -197,15 +200,21 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-5 col-md-10">
                     <div class="card-berkas card-red-gradient">
+                        <h5>A. Berkas Pendaftaran</h5>
+                        <ul>
+                            <li>Scan Kartu Keluarga</li>
+                        </ul>
+                        <hr class="my-3">
+                        <h5>B. Berkas Daftar Ulang</h5>
                         <ul>
                             <li>Surat Kelakuan Baik dari Sekolah Asal</li>
                             <li>Surat Keterangan Sehat dari Puskesmas, RS atau Klinik</li>
                             <li>Surat Keterangan Tidak Buta Warna dari Puskesmas, RS atau Klinik</li>
-                            <li>Foto Copy Rapor Semester 1-5</li>
+                            <li>Scan Rapor Semester 1-5</li>
                             <li>Pas Foto 3x4 sejumlah 4 lembar Latar Merah (Pakai Seragam Sekolah)</li>
-                            <li>Foto Copy Akte Kelahiran</li>
-                            <li>Foto Copy Kartu Keluarga</li>
-                            <li>Foto Copy Ijazah (menyusul)</li>
+                            <li>Scan Akte Kelahiran</li>
+                            <li>Scan Kartu Keluarga</li>
+                            <li>Scan Ijazah (menyusul)</li>
                         </ul>
                     </div>
                 </div>
@@ -410,5 +419,6 @@
     <!-- <div>Some Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
 {% endblock main %}
 {% block js %}
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script type="text/javascript" src="{% static 'homepage/js/home.js' %}"></script>
 {% endblock js %}
