--- a/participant_profile/templates/participant_profile/graduation.html
+++ b/participant_profile/templates/participant_profile/graduation.html
@@ -15,17 +15,17 @@
                         <tr>
                             <td>Nomor Peserta</td>
                             <td>:</td>
-                            <td>221001</td>
+                            <td>{{ data.participant.username  }}</td>
                         </tr>
                         <tr>
                             <td>Nama Lengkap</td>
                             <td>:</td>
-                            <td>Lukman</td>
+                            <td>{{ data.participant.participant.full_name  }}</td>
                         </tr>
                         <tr>
                             <td>Tanggal Lahir</td>
                             <td>:</td>
-                            <td>22 April 2002</td>
+                            <td>{{ data.participant.participantprofile.date_born  }}</td>
                         </tr>
                     </table>
                 </p>
