--- a/participant_profile/templates/participant_profile/primaseru.html
+++ b/participant_profile/templates/participant_profile/primaseru.html
@@ -62,18 +62,8 @@
                     <label class="custom-file-label" for="{{ form_ph.image.auto_id }}">Upload Photo</label>
                 </div>
             </form>
-            {% if status.accepted %}
-                <div class="alert alert-success mt-3 mb-0" role="alert">
-                    Selamat Anda Dinyatakan Diterima di SMK Telkom Bandung! <br />
-                    Jurusan: {{ status.get_major_display  }}
-                </div>
-            {% elif status.accepted == False %}
-                <div class="alert alert-danger mt-3 mb-0" role="alert">
-                    Jangan bersedih hati, Anda belum diterima di SMK Telkom Bandung.
-                </div>
-            {% endif %}
             <a class="btn btn-outline-secondary btn-sm mt-3" href="{% url 'logout' %}">Logout</a>
-            <a class="btn btn-info btn-sm mt-3" href="">
+            <a class="btn btn-info btn-sm mt-3" href="{% url 'id-card' %}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-arrow-down-fill" viewBox="0 0 16 16">
                     <path d="M8 2a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 6.095 0 7.555 0 9.318 0 11.366 1.708 13 3.781 13h8.906C14.502 13 16 11.57 16 9.773c0-1.636-1.242-2.969-2.834-3.194C12.923 3.999 10.69 2 8 2zm2.354 6.854l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L7.5 9.293V5.5a.5.5 0 0 1 1 0v3.793l1.146-1.147a.5.5 0 0 1 .708.708z"/>
                 </svg>
