--- a/templates/homepage/register.html
+++ b/templates/homepage/register.html
@@ -39,8 +39,8 @@
                                     <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
                                 </svg>
                                 <div class="pl-2">
-                                    <p class="m-0">Nofrizal</p>
-                                    <a href="https://api.whatsapp.com/send?phone=6281222758538&text=Salam%20Pak%20Nofrizal%20,%20saya%20dapat%20link%20dari%20Web%20Primaseru.%20Mohon%20informasi%20lengkap%20mengenai%20PPDB%20SMK%20Telkom%20Bandung%20T.P.%202021/2022.%20Terima%20kasih." target="_blank">0812-2275-8538 </a>
+                                    <p class="m-0">Chantya</p>
+                                    <a href="https://api.whatsapp.com/send?phone=6281222758538&text=Salam%20Bu%20Chantya%20,%20saya%20dapat%20link%20dari%20Web%20Primaseru.%20Mohon%20informasi%20lengkap%20mengenai%20PPDB%20SMK%20Telkom%20Bandung%20T.P.%202021/2022.%20Terima%20kasih." target="_blank">0812-2275-8538 </a>
                                 </div>
                             </div>
 
@@ -49,8 +49,24 @@
                                     <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
                                 </svg>
                                 <div class="pl-2">
-                                    <p class="m-0">Chantyaq</p>
-                                    <a href="https://api.whatsapp.com/send?phone=6281222758538&text=Salam%20bu%20Chantyaq%20,%20saya%20dapat%20link%20dari%20Web%20Primaseru.%20Mohon%20informasi%20lengkap%20mengenai%20PPDB%20SMK%20Telkom%20Bandung%20T.P.%202021/2022.%20Terima%20kasih." target="_blank">0821-1562-6620</a>
+                                    <p class="m-0">Istyana</p>
+                                    <a href="https://api.whatsapp.com/send?phone=6282115626620&text=Salam%20Bu%20Istyana%20,%20saya%20dapat%20link%20dari%20Web%20Primaseru.%20Mohon%20informasi%20lengkap%20mengenai%20PPDB%20SMK%20Telkom%20Bandung%20T.P.%202021/2022.%20Terima%20kasih." target="_blank">0821-1562-6620</a>
+                                </div>
+                            </div>
+                            <div class="d-flex">
+                               <svg width="24" height="21" viewBox="0 0 24 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                  <g clip-path="url(#clip0)">
+                                  <path d="M23.6051 13.1661L16.7926 0.78212C16.3991 0.0669301 15.3713 0.0669301 14.9779 0.78212L11.9712 6.24788L15.7769 13.1661C15.8568 13.3083 15.8938 13.4705 15.8835 13.6332C15.8525 14.0947 15.4354 14.5002 14.8701 14.5005H14.8706C14.8702 14.5005 14.87 14.5006 14.8696 14.5006H13.6376V19.223C13.6376 19.3389 13.6604 19.4536 13.7047 19.5606C13.7491 19.6677 13.8141 19.7649 13.896 19.8468C13.9779 19.9287 14.0752 19.9937 14.1822 20.0381C14.2892 20.0824 14.4039 20.1052 14.5198 20.1052H17.2508C17.4848 20.1052 17.7091 20.0123 17.8746 19.8468C18.04 19.6814 18.133 19.457 18.133 19.223V14.5004H22.6977C23.4518 14.5005 23.9423 13.7792 23.6051 13.1661V13.1661Z" fill="#28BF7B"></path>
+                                  <path d="M8.96454 0.782135C8.57111 0.0669251 7.5434 0.0669251 7.14988 0.782135L0.337384 13.1661C0.000180166 13.7792 0.49067 14.5005 1.24473 14.5005H5.80952V19.2231C5.80952 19.457 5.90247 19.6814 6.0679 19.8468C6.23333 20.0123 6.45771 20.1052 6.69167 20.1052H9.42266C9.65664 20.1052 9.88102 20.0123 10.0465 19.8468C10.2119 19.6814 10.3049 19.457 10.3049 19.223V14.5006H9.07289C9.07254 14.5006 9.07227 14.5005 9.0719 14.5005H9.07236C8.50706 14.5002 8.08999 14.0947 8.05899 13.6332C8.0487 13.4705 8.0857 13.3083 8.16553 13.1661L11.9713 6.24789L8.96454 0.782135Z" fill="#39E09B"></path>
+                                  </g>
+                                  <defs>
+                                  <clipPath id="clip0">
+                                  <rect width="24" height="20.2581" fill="white"></rect>
+                                  </clipPath>
+                                  </defs>
+                                </svg>
+                                <div class="pl-2">
+                                    <a href="https://linktr.ee/smktelkombandung" target="_blank">Klik untuk pusat info</a>
                                 </div>
                             </div>
                         </div>
