--- a/templates/participant_profile/lms_account.html
+++ b/templates/participant_profile/lms_account.html
@@ -1,4 +1,4 @@
-<div class="card card-bg mx-3 mb-3">
+<div class="card card-bg mx-3 mb-3 mt-3">
     <div class="card-body">
         <h4 class="card-title judul">
             Akun Ujian Primaseru
@@ -6,8 +6,9 @@
         <p class="card-text">
             Silahkan catat <b>Username</b> dan <b>Password</b> supaya dapat mengakses halaman Ujian Primaseru.
             <hr />
-            Jadwal Ujian: <br />
-            Tanggal 08 Agustus 2020
+            Jadwal Ujian <br />
+            Tanggal:  08 Agustus 2020 <br />
+            Pukul:  08 Agustus 2020 <br />
             <a href="">Masuk Ujian</a>
 
         </p>
