--- a/templates/participant_profile/primaseru.html
+++ b/templates/participant_profile/primaseru.html
@@ -74,15 +74,15 @@
     <div class="row">
         <div class="col-12 px-2 px-lg-5 bg-light border-bottom border-top">
             <div class="nav nav-fill mx-0 mx-lg-5 px-0 px-lg-3" id="v-pills-tab" role="navigation">
-                <a class="nav-link tab-profile active" id="v-pills-identity-tab" data-toggle="pill" href="#v-pills-identity" role="tab" aria-controls="v-pills-identity" aria-selected="true">Identitas Diri</a>
-                <a class="nav-link tab-profile" id="v-pills-id-ayah-tab" data-toggle="pill" href="#v-pills-id-ayah" role="tab" aria-controls="v-pills-id-ayah" aria-selected="false">Identitas Ayah</a>
-                <a class="nav-link tab-profile" id="v-pills-id-ibu-tab" data-toggle="pill" href="#v-pills-id-ibu" role="tab" aria-controls="v-pills-id-ibu" aria-selected="false">Identitas Ibu</a>
-                <a class="nav-link tab-profile" id="v-pills-id-wali-tab" data-toggle="pill" href="#v-pills-id-wali" role="tab" aria-controls="v-pills-id-wali" aria-selected="false">Identitas Wali</a>
-                <a class="nav-link tab-profile" id="v-pills-major-tab" data-toggle="pill" href="#v-pills-major" role="tab" aria-controls="v-pills-major" aria-selected="false">Jurusan</a>
+                <a class="nav-link tab-profile active" id="v-pills-major-tab" data-toggle="pill" href="#v-pills-major" role="tab" aria-controls="v-pills-major" aria-selected="false">Jurusan</a>
+                <a class="nav-link tab-profile" id="v-pills-files-tab" data-toggle="pill" href="#v-pills-files" role="tab" aria-controls="v-pills-files" aria-selected="false">Berkas</a>
                 <a class="nav-link tab-profile" id="v-pills-exam-tab" data-toggle="pill" href="#v-pills-exam" role="tab" aria-controls="v-pills-exam" aria-selected="false">Akun Ujian</a>
                 <a class="nav-link tab-profile" id="v-pills-graduation-tab" data-toggle="pill" href="#v-pills-graduation" role="tab" aria-controls="v-pills-graduation" aria-selected="false">Pengumuman</a>
                 {% if kelulusan %}
-                    <!-- <a class="nav-link tab-profile" id="v-pills-files-tab" data-toggle="pill" href="#v-pills-files" role="tab" aria-controls="v-pills-files" aria-selected="false">Berkas</a> -->
+                <a class="nav-link tab-profile" id="v-pills-identity-tab" data-toggle="pill" href="#v-pills-identity" role="tab" aria-controls="v-pills-identity" aria-selected="true">Identitas Diri</a>
+                <a class="nav-link tab-profile" id="v-pills-id-ayah-tab" data-toggle="pill" href="#v-pills-id-ayah" role="tab" aria-controls="v-pills-id-ayah" aria-selected="false">Identitas Ayah</a>
+                <a class="nav-link tab-profile" id="v-pills-id-ibu-tab" data-toggle="pill" href="#v-pills-id-ibu" role="tab" aria-controls="v-pills-id-ibu" aria-selected="false">Identitas Ibu</a>
+                <a class="nav-link tab-profile" id="v-pills-id-wali-tab" data-toggle="pill" href="#v-pills-id-wali" role="tab" aria-controls="v-pills-id-wali" aria-selected="false">Identitas Wali</a>
                 <a class="nav-link tab-profile" id="v-pills-graduation-tab" data-toggle="pill" href="#v-graduation-exam" role="tab" aria-controls="v-pills-graduation" aria-selected="false">Pembayaran</a>
                 {% endif %}
             </div>
@@ -93,7 +93,7 @@
         <div class="container">
             <div class="col-sm-12">
                 <div class="tab-content" id="v-pills-tabContent">
-                    <div class="tab-pane fade show active" id="v-pills-identity" role="tabpanel" aria-labelledby="v-pills-identity-tab">
+                    <div class="tab-pane fade" id="v-pills-identity" role="tabpanel" aria-labelledby="v-pills-identity-tab">
                         <div class="row shadow rounded py-2 bg-white min-vh mb-4">
                             <form method="POST" class="col-12 px-3 pt-3" action="{% url 'ajax-participant' %}" id="peserta-form">
 
@@ -121,7 +121,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="tab-pane fade" id="v-pills-major" role="tabpanel" aria-labelledby="v-pills-major-tab">
+                    <div class="tab-pane fade  show active" id="v-pills-major" role="tabpanel" aria-labelledby="v-pills-major-tab">
                         <div class="row shadow rounded py-2 bg-white min-vh mb-4" id="major-content">
                             <form method="POST" class="col-12 px-3 pt-3" action="{% url 'ajax-major' %}" id="jurusan-form">
 
@@ -130,7 +130,13 @@
                     </div>
                     <div class="tab-pane fade" id="v-pills-files" role="tabpanel" aria-labelledby="v-pills-files-tab">
                         <div class="row shadow  rounded py-2 bg-white min-vh mb-4" id="files-content">
-                            <form method="POST" class="col-12 px-3 pt-3" action="{% url 'ajax-files' %}" id="berkas-form">
+                            <form method="POST" class="col-12 px-3 pt-3"
+                                  {% if kelulusan %}
+                                  action="{% url 'ajax-files' %}" id="berkas-form"
+                                  {% else %}
+                                  action="{% url 'ajax-kk' %}" id="KK-form"
+                                  {% endif %}
+                            >
 
                             </form>
                         </div>
