add re-register payment page

--- a/templates/dashboard/dashboard_base.html
+++ b/templates/dashboard/dashboard_base.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="{% static 'dashboard/css/sidenav.css' %}" type="text/css" media="screen" />
 {% endblock head %}
 {% block navbar %}{% endblock navbar %}
+{% block alert %}{% endblock alert %}
 {% block dashboard %}
 
     <div id="mySidenav" class="sidenav shadow">
