--- a/templates/participant_profile/graduation.html
+++ b/templates/participant_profile/graduation.html
@@ -1,66 +1,153 @@
-<div class="container">
-    <div class="mx-0 mx-sm-5 py-0 p-sm-3 d-flex justify-content-center"  id="kartu-peserta">
-        <div class="w-100">
-            {% if data.passed == 'L' %}
-            <div class="border rounded p-3" style="background: #f4fff2">
-                <h4 class="judul text-center">Pengumuman Hasil Seleksi</h4>
-                <hr />
-                <p>
-                    <table>
-                        <tr>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                        </tr>
-                        <tr>
-                            <td>Nomor Peserta</td>
-                            <td>:</td>
-                            <td>{{ data.participant.username  }}</td>
-                        </tr>
-                        <tr>
-                            <td>Nama Lengkap</td>
-                            <td>:</td>
-                            <td>{{ data.participant.participant.full_name  }}</td>
-                        </tr>
-                        <tr>
-                            <td>Tanggal Lahir</td>
-                            <td>:</td>
-                            <td>{{ data.participant.participantprofile.date_born  }}</td>
-                        </tr>
-                    </table>
-                </p>
-                <p class="judul font-weight-bold">
-                    Selamat! Anda dinyatakan lulus seleksi
-                    Primaseru SMK Telkom Bandung tahun 2021:
-                </p>
-                <p class="border border-success rounded p-3 bg-white">
-                    Program Studi: Teknik Komputer dan Jaringan
-                </p>
-                <div>
-                    <p>
-                        Silahkan unggah berkas yang diperlukan untuk menyelesaikan proses pendaftaran.
-                    </p>
-                <a class="btn btn-block btn-primary" href="{% url 'files' %}">Unggah Berkas</a>
-                {% if data.letter %}
-                <a class="btn btn-block btn-primary" href="{{ data.letter.url  }}">Unggah Berkas</a>
-                {% endif %}
-                </div>
+{% extends 'homepage/base.html' %}
+{% load static %}
+{% load crispy_forms_tags %}
+{% block head %}
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+    <link rel="stylesheet" href="{% static 'dashboard/css/insert_participant.css' %}" type="text/css" media="screen" />
+    <style type="text/css" media="screen">
+     .min-vh{
+         min-height: 50vh;
+     }
+     .banner {
+         border-radius: 0.25rem;
+         color: #fff;
+         background-color: #FF0000;
+     }
+     .nav .nav-link:hover::after {
+         width: 100%;
+     }
+     #v-pills-tab .nav-link:hover {
+         border-bottom: 2px solid #aaa;
+     }
+     #v-pills-tab .nav-link.active{
+         color: red;
+         border-bottom: 2px solid red;
+         background: #fff;
+     }
+     .card-bg {
+         background-color: #fff2f4;
+         border-color: #ffc9c6;
+     }
+    </style>
+{% endblock head %}
+{% block navbar %}{% endblock navbar %}
+{% block container %}container-fluid{% endblock container %}
+{% block main %}
+
+
+
+    <div class="row mx-1 mx-sm-4 my-0 my-sm-3 py-2 pt-4">
+        <div class="col text-center ml-3">
+            <img src="{{ user.photoprofile.image.url }}" alt="photo profile" width="175" height="175" />
+        </div>
+        <div class="col-sm-9">
+            <div class="border rounded p-3 mt-3 mt-md-0 bg-white">
+                <h1 class="judul">{{ user.participant.full_name|title  }} </h1>
+                <h6 class="text-muted mb-1">Asal Sekolah: {{ user.participantprofile.school_origin|upper  }}</h6>
+                <h6 class="text-muted">Nomor Peserta: {{ user.participant.registration_number  }}</h6>
             </div>
-            {% elif data.passed == 'TL' %}
-            <div class="border rounded p-3" style="background: #fff5f2">
-                <h4 class="judul text-center">Pengumuman Hasil Seleksi</h4>
-                <hr />
-                <p class="border border-danger rounded p-3 bg-white">
-                    Mohon maaf, Anda tidak lulus seleksi Primaseru SMK Telkom Bandung. <br />
-                    Jangan menyerah dan putus asa, masih ada banyak jalan yang bisa ditempuh.
-                </p>
+            <div class="mt-3">
+                <a class="btn btn-outline-secondary btn-sm" href="{% url 'logout' %}">Logout</a>
+                <a class="btn btn-info btn-sm" href="{% url 'id-card' %}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-arrow-down-fill" viewBox="0 0 16 16">
+                        <path d="M8 2a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 6.095 0 7.555 0 9.318 0 11.366 1.708 13 3.781 13h8.906C14.502 13 16 11.57 16 9.773c0-1.636-1.242-2.969-2.834-3.194C12.923 3.999 10.69 2 8 2zm2.354 6.854l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L7.5 9.293V5.5a.5.5 0 0 1 1 0v3.793l1.146-1.147a.5.5 0 0 1 .708.708z"/>
+                    </svg>
+                    Kartu Peserta
+                </a>
+                <a class="btn btn-danger btn-sm" href="{% url 'set-photo-profile' %}">
+                    Unggah Photo
+                </a>
             </div>
-            {% else %}
-            <div class="border rounded p-3" style="background: #f4fff2">
-                <h4 class="judul text-center">Kelulusan akan diumumkan, minimal satu minggu setelah tes.</h4>
-            </div>
-            {% endif %}
         </div>
     </div>
 
-</div>
+    <div class="row">
+        <div class="col-12 px-2 px-lg-5 bg-light border-bottom border-top">
+            <div class="nav nav-fill mx-0 mx-lg-5 px-0 px-lg-3" id="v-pills-tab" role="navigation">
+                <a class="nav-link tab-profile" href="{% url 'participant-major' %}" role="tab">Jurusan</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-kk' %}" role="tab">Unggah KK</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-lms' %}" role="tab">Akun LMS</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-graduation' %}" role="tab">Kelulusan</a>
+                {% if pass_test == 'L' %}
+                <a class="nav-link tab-profile" href="{% url 'participant-profile' %}" role="tab">Data Pribari</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-father' %}" role="tab">Data Ayah</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-mother' %}" role="tab">Data Ibu</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-guardian' %}" role="tab">Data Wali</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-payment' %}" role="tab">Pembayaran Daftar ulang</a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+
+    <div class="row bg-light pt-3">
+        <div class="container">
+            <div class="col-sm-12">
+                <div class="shadow rounded py-2 bg-white min-vh mb-4">
+                    <div class="mx-0 mx-sm-5 py-0 p-sm-3 d-flex justify-content-center"  id="kartu-peserta">
+                        <div class="w-100">
+                            {% if data.passed == 'L' %}
+                                <div class="border rounded p-3" style="background: #f4fff2">
+                                    <h4 class="judul text-center">Pengumuman Hasil Seleksi</h4>
+                                    <hr />
+                                    <p>
+                                        <table>
+                                            <tr>
+                                                <th></th>
+                                                <th></th>
+                                                <th></th>
+                                            </tr>
+                                            <tr>
+                                                <td>Nomor Peserta</td>
+                                                <td>:</td>
+                                                <td>{{ data.participant.participant.registration_number }}</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Nama Lengkap</td>
+                                                <td>:</td>
+                                                <td>{{ data.participant.participant.full_name  }}</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Tanggal Lahir</td>
+                                                <td>:</td>
+                                                <td>{{ data.participant.participantprofile.date_born|date:"d F Y"  }}</td>
+                                            </tr>
+                                        </table>
+                                    </p>
+                                    <p class="judul font-weight-bold">
+                                        Selamat! Anda dinyatakan lulus seleksi
+                                        Primaseru SMK Telkom Bandung tahun 2021:
+                                    </p>
+                                    <p class="border border-success rounded p-3 bg-white">
+                                        Program Studi: Teknik Komputer dan Jaringan
+                                    </p>
+                                    <div>
+                                        <p>
+                                            Silahkan unggah berkas yang diperlukan untuk menyelesaikan proses pendaftaran.
+                                        </p>
+                                        <a class="btn btn-block btn-primary" href="{% url 'files-upload' %}">Unggah Berkas</a>
+                                        {% if data.letter %}
+                                            <a class="btn btn-block btn-outline-danger" href="{{ data.letter.url  }}">Unduh Surat Kelulusan</a>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            {% elif data.passed == 'TL' %}
+                                <div class="border rounded p-3" style="background: #fff5f2">
+                                    <h4 class="judul text-center">Pengumuman Hasil Seleksi</h4>
+                                    <hr />
+                                    <p class="border border-danger rounded p-3 bg-white">
+                                        Mohon maaf, Anda tidak lulus seleksi Primaseru SMK Telkom Bandung. <br />
+                                        Jangan menyerah dan putus asa, masih ada banyak jalan yang bisa ditempuh.
+                                    </p>
+                                </div>
+                            {% else %}
+                                <div class="border rounded p-3" style="background: #f4fff2">
+                                    <h4 class="judul text-center">Kelulusan akan diumumkan, minimal satu minggu setelah tes.</h4>
+                                </div>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+{% endblock main %}
