--- a/templates/participant_profile/lms_account.html
+++ b/templates/participant_profile/lms_account.html
@@ -1,59 +1,151 @@
-<div class="card card-bg mx-3 mb-3 mt-3">
-    <div class="card-body">
-        <h4 class="card-title judul">
-            Akun Ujian Primaseru
-        </h4>
-        <p class="card-text">
-            Silahkan catat <b>Username</b> dan <b>Password</b> supaya dapat mengakses halaman Ujian Primaseru.
-            <hr />
-            <div class="border bg-white py-3 px-2">
-                <b class="judul">Jadwal Ujian</b> <br />
-                Tanggal:  {{ data.schedule|date:"l, d F Y" }} <br />
-                Pukul:  {{ data.time }} <br />
-            </div>
-        </p>
-        <a href="http://elearning.smktelkom-bdg.sch.id/" target="_blank" class="btn btn-danger btn-sm">Masuk Ujian</a>
-    </div>
-</div>
+{% extends 'homepage/base.html' %}
+{% load static %}
+{% load crispy_forms_tags %}
+{% block head %}
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+    <link rel="stylesheet" href="{% static 'dashboard/css/insert_participant.css' %}" type="text/css" media="screen" />
+    <style type="text/css" media="screen">
+     .min-vh{
+         min-height: 50vh;
+     }
+     .banner {
+         border-radius: 0.25rem;
+         color: #fff;
+         background-color: #FF0000;
+     }
+     .nav .nav-link:hover::after {
+         width: 100%;
+     }
+     #v-pills-tab .nav-link:hover {
+         border-bottom: 2px solid #aaa;
+     }
+     #v-pills-tab .nav-link.active{
+         color: red;
+         border-bottom: 2px solid red;
+         background: #fff;
+     }
+     .card-bg {
+         background-color: #fff2f4;
+         border-color: #ffc9c6;
+     }
+    </style>
+{% endblock head %}
+{% block navbar %}{% endblock navbar %}
+{% block container %}container-fluid{% endblock container %}
+{% block main %}
 
-<div class="">
-    <div class="mx-0 mb-1 mb-sm-3 mx-sm-3 py-0 p-sm-3 border border-dark rounded d-flex justify-content-center"  id="kartu-peserta">
-        <div class="w-s-100">
-            <h4 class='judul text-center mb-0 font-weight-bold'>
-            Akun Peserta Primaseru
-        </h4>
-        <div class="px-0 px-sm-3 py-3 py-sm-4 judul">
-            <div class="media rounded-lg border mb-2 p-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" fill="currentColor" class="bi bi-person-fill icon danger" viewBox="0 0 16 16">
-                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                </svg>
-                <div class="media-body">
-                    <p class="font-weight-bold mb-2">Nama Lengkap</p>
-                    <p class="h5">{{ data.participant.participant.full_name  }}</p>
-                </div>
+    <div class="row mx-1 mx-sm-4 my-0 my-sm-3 py-2 pt-4">
+        <div class="col text-center ml-3">
+            <img src="{{ user.photoprofile.image.url }}" alt="photo profile" width="175" height="175" />
+        </div>
+        <div class="col-sm-9">
+            <div class="border rounded p-3 mt-3 mt-md-0 bg-white">
+                <h1 class="judul">{{ user.participant.full_name|title  }} </h1>
+                <h6 class="text-muted mb-1">Asal Sekolah: {{ user.participantprofile.school_origin|upper  }}</h6>
+                <h6 class="text-muted">Nomor Peserta: {{ user.participant.registration_number  }}</h6>
             </div>
-            <div class="media rounded-lg border my-2 p-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" fill="currentColor" class="p-2 bi bi-tag icon success" viewBox="0 0 16 16">
-                    <path d="M6 4.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-1 0a.5.5 0 1 0-1 0 .5.5 0 0 0 1 0z"/>
-                    <path d="M2 1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 1 6.586V2a1 1 0 0 1 1-1zm0 5.586 7 7L13.586 9l-7-7H2v4.586z"/>
-                </svg>
-                <div class="media-body">
-                    <p class="font-weight-bold mb-2">Username</p>
-                    <p class="h5">{{ data.username  }}</p>
-                </div>
+            <div class="mt-3">
+                <a class="btn btn-outline-secondary btn-sm" href="{% url 'logout' %}">Logout</a>
+                <a class="btn btn-info btn-sm" href="{% url 'id-card' %}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-arrow-down-fill" viewBox="0 0 16 16">
+                        <path d="M8 2a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 6.095 0 7.555 0 9.318 0 11.366 1.708 13 3.781 13h8.906C14.502 13 16 11.57 16 9.773c0-1.636-1.242-2.969-2.834-3.194C12.923 3.999 10.69 2 8 2zm2.354 6.854l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L7.5 9.293V5.5a.5.5 0 0 1 1 0v3.793l1.146-1.147a.5.5 0 0 1 .708.708z"/>
+                    </svg>
+                    Kartu Peserta
+                </a>
+                <a class="btn btn-danger btn-sm" href="{% url 'set-photo-profile' %}">
+                    Unggah Photo
+                </a>
             </div>
-            <div class="media rounded-lg border my-2 p-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" fill="currentColor" class="p-1 bi bi-key icon warning" viewBox="0 0 16 16">
-                    <path d="M0 8a4 4 0 0 1 7.465-2H14a.5.5 0 0 1 .354.146l1.5 1.5a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0L13 9.207l-.646.647a.5.5 0 0 1-.708 0L11 9.207l-.646.647a.5.5 0 0 1-.708 0L9 9.207l-.646.647A.5.5 0 0 1 8 10h-.535A4 4 0 0 1 0 8zm4-3a3 3 0 1 0 2.712 4.285A.5.5 0 0 1 7.163 9h.63l.853-.854a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.793-.793-1-1h-6.63a.5.5 0 0 1-.451-.285A3 3 0 0 0 4 5z"/>
-                    <path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                </svg>
-                <div class="media-body">
-                    <p class="font-weight-bold mb-2">Password</p>
-                    <p class="h5">{{ data.password  }}</p>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col-12 px-2 px-lg-5 bg-light border-bottom border-top">
+            <div class="nav nav-fill mx-0 mx-lg-5 px-0 px-lg-3" id="v-pills-tab" role="navigation">
+                <a class="nav-link tab-profile" href="{% url 'participant-major' %}" role="tab">Jurusan</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-kk' %}" role="tab">Unggah KK</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-lms' %}" role="tab">Akun LMS</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-graduation' %}" role="tab">Kelulusan</a>
+                {% if pass_test == 'L' %}
+                <a class="nav-link tab-profile" href="{% url 'participant-profile' %}" role="tab">Data Pribari</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-father' %}" role="tab">Data Ayah</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-mother' %}" role="tab">Data Ibu</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-guardian' %}" role="tab">Data Wali</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-payment' %}" role="tab">Pembayaran Daftar ulang</a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+
+    <div class="row bg-light pt-3">
+        <div class="container">
+            <div class="col-sm-12">
+                <div class="row shadow rounded py-2 bg-white min-vh mb-4">
+                    <div class="col-12">
+                        <div class="card card-bg mx-3 mb-3 mt-3">
+                            <div class="card-body">
+                                <h4 class="card-title judul">
+                                    Akun Ujian Primaseru
+                                </h4>
+                                <p class="card-text">
+                                    Silahkan catat <b>Username</b> dan <b>Password</b> supaya dapat mengakses halaman Ujian Primaseru.
+                                    <hr />
+                                    <div class="border bg-white py-3 px-2">
+                                        <b class="judul">Jadwal Ujian</b> <br />
+                                        Tanggal:  {{ data.schedule|date:"l, d F Y" }} <br />
+                                        Pukul:  {{ data.time }} <br />
+                                    </div>
+                                </p>
+                                <a href="http://elearning.smktelkom-bdg.sch.id/" target="_blank" class="btn btn-danger btn-sm">Masuk Ujian</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <div class="mx-0 mb-1 mb-sm-3 mx-sm-3 py-0 p-sm-3 border border-dark rounded d-flex justify-content-center"  id="kartu-peserta">
+                            <div class="w-s-100">
+                                <h4 class='judul text-center mb-0 font-weight-bold'>
+                                    Akun Peserta Primaseru
+                                </h4>
+                                <div class="px-0 px-sm-3 py-3 py-sm-4 judul">
+                                    <div class="media rounded-lg border mb-2 p-3">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" fill="currentColor" class="bi bi-person-fill icon danger" viewBox="0 0 16 16">
+                                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                                        </svg>
+                                        <div class="media-body">
+                                            <p class="font-weight-bold mb-2">Nama Lengkap</p>
+                                            <p class="h5">{{ data.participant.participant.full_name  }}</p>
+                                        </div>
+                                    </div>
+                                    <div class="media rounded-lg border my-2 p-3">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" fill="currentColor" class="p-2 bi bi-tag icon success" viewBox="0 0 16 16">
+                                            <path d="M6 4.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-1 0a.5.5 0 1 0-1 0 .5.5 0 0 0 1 0z"/>
+                                            <path d="M2 1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 1 6.586V2a1 1 0 0 1 1-1zm0 5.586 7 7L13.586 9l-7-7H2v4.586z"/>
+                                        </svg>
+                                        <div class="media-body">
+                                            <p class="font-weight-bold mb-2">Username</p>
+                                            <p class="h5">{{ data.username  }}</p>
+                                        </div>
+                                    </div>
+                                    <div class="media rounded-lg border my-2 p-3">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" fill="currentColor" class="p-1 bi bi-key icon warning" viewBox="0 0 16 16">
+                                            <path d="M0 8a4 4 0 0 1 7.465-2H14a.5.5 0 0 1 .354.146l1.5 1.5a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0L13 9.207l-.646.647a.5.5 0 0 1-.708 0L11 9.207l-.646.647a.5.5 0 0 1-.708 0L9 9.207l-.646.647A.5.5 0 0 1 8 10h-.535A4 4 0 0 1 0 8zm4-3a3 3 0 1 0 2.712 4.285A.5.5 0 0 1 7.163 9h.63l.853-.854a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.793-.793-1-1h-6.63a.5.5 0 0 1-.451-.285A3 3 0 0 0 4 5z"/>
+                                            <path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                                        </svg>
+                                        <div class="media-body">
+                                            <p class="font-weight-bold mb-2">Password</p>
+                                            <p class="h5">{{ data.password  }}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
-        </div>
     </div>
 
-</div>
+{% endblock main %}
