--- a/templates/participant_profile/primaseru.html
+++ b/templates/participant_profile/primaseru.html
@@ -48,42 +48,43 @@
 
 
     <div class="row mx-1 mx-sm-4 my-0 my-sm-3 py-2 pt-4">
-        <div class="col-sm-3 text-center mb-1">
+        <div class="col text-center ml-3">
             <img src="{{ user.photoprofile.image.url }}" alt="photo profile" width="175" height="175" />
         </div>
-        <div class="col-sm-9 mb-1">
-            <h1>{{ user.participant.full_name|title  }} </h1>
-            <h6 class="text-muted">Asal Sekolah: {{ user.participantprofile.school_origin|upper  }}</h6>
-            <h6 class="text-muted">Nomor Peserta: {{ user.participant.registration_number  }}</h6>
-            <form method="POST" enctype="multipart/form-data" id="photo-profile-form" name="photo-profile-form">
-                {% csrf_token %}
-                <div class="custom-file">
-                    <input type="file" accept="image/*" class="custom-file-input" value="{{ form_ph.image.value }}" id="{{ form_ph.image.auto_id }}" name="image">
-                    <label class="custom-file-label" for="{{ form_ph.image.auto_id }}">Upload Photo</label>
-                </div>
-            </form>
-            <a class="btn btn-outline-secondary btn-sm mt-3" href="{% url 'logout' %}">Logout</a>
-            <a class="btn btn-info btn-sm mt-3" href="{% url 'id-card' %}">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-arrow-down-fill" viewBox="0 0 16 16">
-                    <path d="M8 2a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 6.095 0 7.555 0 9.318 0 11.366 1.708 13 3.781 13h8.906C14.502 13 16 11.57 16 9.773c0-1.636-1.242-2.969-2.834-3.194C12.923 3.999 10.69 2 8 2zm2.354 6.854l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L7.5 9.293V5.5a.5.5 0 0 1 1 0v3.793l1.146-1.147a.5.5 0 0 1 .708.708z"/>
-                </svg>
-                Kartu Peserta
-            </a>
+        <div class="col-sm-9">
+            <div class="border rounded p-3 mt-3 mt-md-0 bg-white">
+                <h1 class="judul">{{ user.participant.full_name|title  }} </h1>
+                <h6 class="text-muted mb-1">Asal Sekolah: {{ user.participantprofile.school_origin|upper  }}</h6>
+                <h6 class="text-muted">Nomor Peserta: {{ user.participant.registration_number  }}</h6>
+            </div>
+            <div class="mt-3">
+                <a class="btn btn-outline-secondary btn-sm" href="{% url 'logout' %}">Logout</a>
+                <a class="btn btn-info btn-sm" href="{% url 'id-card' %}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-arrow-down-fill" viewBox="0 0 16 16">
+                        <path d="M8 2a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 6.095 0 7.555 0 9.318 0 11.366 1.708 13 3.781 13h8.906C14.502 13 16 11.57 16 9.773c0-1.636-1.242-2.969-2.834-3.194C12.923 3.999 10.69 2 8 2zm2.354 6.854l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L7.5 9.293V5.5a.5.5 0 0 1 1 0v3.793l1.146-1.147a.5.5 0 0 1 .708.708z"/>
+                    </svg>
+                    Kartu Peserta
+                </a>
+                <a class="btn btn-danger btn-sm" href="{% url 'set-photo-profile' %}">
+                    Unggah Photo
+                </a>
+            </div>
         </div>
     </div>
+
     <div class="row">
         <div class="col-12 px-2 px-lg-5 bg-light border-bottom border-top">
             <div class="nav nav-fill mx-0 mx-lg-5 px-0 px-lg-3" id="v-pills-tab" role="navigation">
-                <a class="nav-link tab-profile active" id="v-pills-major-tab" data-toggle="pill" href="#v-pills-major" role="tab" aria-controls="v-pills-major" aria-selected="false">Jurusan</a>
-                <a class="nav-link tab-profile" id="v-pills-files-tab" data-toggle="pill" href="#v-pills-files" role="tab" aria-controls="v-pills-files" aria-selected="false">Berkas</a>
-                <a class="nav-link tab-profile" id="v-pills-exam-tab" data-toggle="pill" href="#v-pills-exam" role="tab" aria-controls="v-pills-exam" aria-selected="false">Akun Ujian</a>
-                <a class="nav-link tab-profile" id="v-pills-graduation-tab" data-toggle="pill" href="#v-pills-graduation" role="tab" aria-controls="v-pills-graduation" aria-selected="false">Pengumuman</a>
-                {% if kelulusan %}
-                <a class="nav-link tab-profile" id="v-pills-identity-tab" data-toggle="pill" href="#v-pills-identity" role="tab" aria-controls="v-pills-identity" aria-selected="true">Identitas Diri</a>
-                <a class="nav-link tab-profile" id="v-pills-id-ayah-tab" data-toggle="pill" href="#v-pills-id-ayah" role="tab" aria-controls="v-pills-id-ayah" aria-selected="false">Identitas Ayah</a>
-                <a class="nav-link tab-profile" id="v-pills-id-ibu-tab" data-toggle="pill" href="#v-pills-id-ibu" role="tab" aria-controls="v-pills-id-ibu" aria-selected="false">Identitas Ibu</a>
-                <a class="nav-link tab-profile" id="v-pills-id-wali-tab" data-toggle="pill" href="#v-pills-id-wali" role="tab" aria-controls="v-pills-id-wali" aria-selected="false">Identitas Wali</a>
-                <a class="nav-link tab-profile" id="v-pills-graduation-tab" data-toggle="pill" href="#v-graduation-exam" role="tab" aria-controls="v-pills-graduation" aria-selected="false">Pembayaran</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-major' %}" role="tab">Jurusan</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-kk' %}" role="tab">Unggah KK</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-lms' %}" role="tab">Akun LMS</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-graduation' %}" role="tab">Kelulusan</a>
+                {% if pass_test == 'L' %}
+                <a class="nav-link tab-profile" href="{% url 'participant-profile' %}" role="tab">Data Pribari</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-father' %}" role="tab">Data Ayah</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-mother' %}" role="tab">Data Ibu</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-guardian' %}" role="tab">Data Wali</a>
+                <a class="nav-link tab-profile" href="{% url 'participant-payment' %}" role="tab">Pembayaran Daftar ulang</a>
                 {% endif %}
             </div>
         </div>
@@ -92,69 +93,88 @@
     <div class="row bg-light pt-3">
         <div class="container">
             <div class="col-sm-12">
-                <div class="tab-content" id="v-pills-tabContent">
-                    <div class="tab-pane fade" id="v-pills-identity" role="tabpanel" aria-labelledby="v-pills-identity-tab">
-                        <div class="row shadow rounded py-2 bg-white min-vh mb-4">
-                            <form method="POST" class="col-12 px-3 pt-3" action="{% url 'ajax-participant' %}" id="peserta-form">
+                <div class="row shadow rounded py-2 bg-white min-vh mb-4">
 
-                            </form>
+                    <div class="card card-bg mt-3 mx-4">
+                        <div class="card-body">
+                            <h4 class="card-title judul">
+                                {% if name == 'jurusan' %}
+                                    Pemilihan {{ name|capfirst  }}
+                                {% else %}
+                                    {{ name|capfirst  }}
+                                {% endif %}
+                            </h4>
+                            <p class="card-text">
+                                {% if name == 'jurusan' %}
+                                    Silahkan memilih {{ name|capfirst }} Anda sesuai minat, jika terdapat tanda bintang (<span class="text-danger">*</span>) berarti wajib diisi.
+                                    <samp class="text-danger">Jurusan yang sudah dipilih tidak bisa diubah.</samp>
+                                {% elif name == 'Pembayaran Daftar Ulang' %}
+                                    Silahkan Mengunggah {{ name }} sesuai kolom yang tersedia, harap melakukan scan terhadap file yang akan di unggah, supaya terlihat jelas. Pembayaran
+                                    Daftar Ulang dapat dilakukan maksimal selama tiga kali.
+                                {% else %}
+                                    {% if name == 'wali' %}
+                                        <p class="p-2 border">Jika tidak mempunyai Wali, boleh dikosongkan.</p>
+                                    {% endif %}
+                                    Silahkan melengkapi data {{ name|capfirst }} Anda sesuai kolom yang tersedia, jika terdapat tanda bintang (<span class="text-danger">*</span>) berarti wajib diisi.
+                                    <samp class="text-danger">Data yang sudah terverifikasi tidak bisa diubah.</samp>
+                                {% endif %}
+                            </p>
+                            {% if name == 'Pembayaran Daftar Ulang' %}
+                                {% if data.verified_1 %}
+                                    <div class="my-3">Pembayaran Ke 1 : <span class="badge badge-success">Terverifikasi</span> | Tenggat Pembayaran: {{ data.deadline_1|date:'d F Y'  }}</div>
+                                {% else %}
+                                    <div class="my-3">Pembayaran Ke 1 : <span class="badge badge-warning">Belum Terverifikasi</span> | Tenggat Pembayaran: {{ data.deadline_1|date:'d F Y'  }}</div>
+                                {% endif %}
+
+                                {% if data.verified_2 %}
+                                    <div class="my-3">Pembayaran Ke 2 : <span class="badge badge-success">Terverifikasi</span> | Tenggat Pembayaran: {{ data.deadline_2|date:'d F Y'  }}</div>
+                                {% else %}
+                                    <div class="my-3">Pembayaran Ke 2 : <span class="badge badge-warning">Belum Terverifikasi</span> | Tenggat Pembayaran: {{ data.deadline_2|date:'d F Y'  }}</div>
+                                {% endif %}
+
+                                {% if data.verified_3 %}
+                                    <div class="my-3">Pembayaran Ke 3 : <span class="badge badge-success">Terverifikasi</span> | Tenggat Pembayaran: {{ data.deadline_3|date:'d F Y'  }}</div>
+                                {% else %}
+                                    <div class="my-3">Pembayaran Ke 3 : <span class="badge badge-warning">Belum Terverifikasi</span> | Tenggat Pembayaran: {{ data.deadline_3|date:'d F Y'  }}</div>
+                                {% endif %}
+                                {% if data.comment_1 %}
+                                    <div class="border bg-white p-2 rounded">
+                                        <h5 class="judul">Komentar Pembayaran Ke-1</h5>
+                                        <p class="mb-0">
+                                            {{ data.comment_1  }}
+                                        </p>
+                                    </div>
+                                {% endif %}
+                                {% if data.comment_2 %}
+                                    <div class="border bg-white p-2 rounded">
+                                        <h5 class="judul">Komentar Pembayaran Ke-1</h5>
+                                        <p class="mb-0">
+                                            {{ data.comment_2  }}
+                                        </p>
+                                    </div>
+                                {% endif %}
+                                {% if data.comment_3 %}
+                                    <div class="border bg-white p-2 rounded">
+                                        <h5 class="judul">Komentar Pembayaran Ke-1</h5>
+                                        <p class="mb-0">
+                                            {{ data.comment_3  }}
+                                        </p>
+                                    </div>
+                                {% endif %}
+                            {% else %}
+                                {% if data.verified %}
+                                    Status : <span class="badge badge-success">Terverifikasi</span>
+                                {% else %}
+                                    Status : <span class="badge badge-warning">Belum Terverifikasi</span>
+                                {% endif %}
+                            {% endif %}
                         </div>
                     </div>
-                    <div class="tab-pane fade" id="v-pills-id-ayah" role="tabpanel" aria-labelledby="v-pills-id-ayah-tab">
-                        <div class="row shadow rounded py-2 bg-white min-vh mb-4" id="father-content">
-                            <form method="POST" class="col-12 px-3 pt-3" action="{% url 'ajax-father' %}" id="ayah-form">
 
-                            </form>
-                        </div>
-                    </div>
-                    <div class="tab-pane fade" id="v-pills-id-ibu" role="tabpanel" aria-labelledby="v-pills-id-ibu-tab">
-                        <div class="row shadow rounded py-2 bg-white min-vh border mb-4" id="mother-content">
-                            <form method="POST" class="col-12 px-3 pt-3" action="{% url 'ajax-mother' %}" id="ibu-form">
+                    <form method="POST" enctype="multipart/form-data" class="col-12" action="">
+                        {% crispy form %}
+                    </form>
 
-                            </form>
-                        </div>
-                    </div>
-                    <div class="tab-pane fade" id="v-pills-id-wali" role="tabpanel" aria-labelledby="v-pills-id-wali-tab">
-                        <div class="row shadow rounded py-2 bg-white min-vh mb-4" id="guardian-content">
-                            <form method="POST" class="col-12 px-3 pt-3" action="{% url 'ajax-guardian' %}" id="wali-form">
-
-                            </form>
-                        </div>
-                    </div>
-                    <div class="tab-pane fade  show active" id="v-pills-major" role="tabpanel" aria-labelledby="v-pills-major-tab">
-                        <div class="row shadow rounded py-2 bg-white min-vh mb-4" id="major-content">
-                            <form method="POST" class="col-12 px-3 pt-3" action="{% url 'ajax-major' %}" id="jurusan-form">
-
-                            </form>
-                        </div>
-                    </div>
-                    <div class="tab-pane fade" id="v-pills-files" role="tabpanel" aria-labelledby="v-pills-files-tab">
-                        <div class="row shadow  rounded py-2 bg-white min-vh mb-4" id="files-content">
-                            <form method="POST" class="col-12 px-3 pt-3"
-                                  {% if kelulusan %}
-                                  action="{% url 'ajax-files' %}" id="berkas-form"
-                                  {% else %}
-                                  action="{% url 'ajax-kk' %}" id="KK-form"
-                                  {% endif %}
-                            >
-
-                            </form>
-                        </div>
-                    </div>
-                    <div class="tab-pane fade" id="v-pills-exam" role="tabpanel" aria-labelledby="v-pills-exam-tab">
-                        <div class="row rounded py-2 bg-white min-vh border mb-4">
-                            <div class="col-12" id="lms-content">
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tab-pane fade" id="v-pills-graduation" role="tabpanel" aria-labelledby="v-pills-graduation-tab">
-                        <div class="row rounded py-2 bg-white min-vh border mb-4">
-                            <div class="col-12" id="graduation-content">
-
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -163,8 +183,8 @@
 {% endblock main %}
 {% block js %}
     <script type="text/javascript" src="{% static 'participant_profile/js/jquery-auto-resize.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'participant_profile/js/getFormPrimaseru.js' %}"></script>
     <script type="text/javascript" src="{% static 'participant_profile/js/primaseru.js' %}"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/datepicker.js' %}"></script>
 {% endblock js %}
