--- a/templates/participant_profile/upload_files.html
+++ b/templates/participant_profile/upload_files.html
@@ -28,7 +28,7 @@
 {% block main %}
 
     <div class="bg-white border rounded p-3 m-3">
-        <div class="card card-bg mx-3 mb-3 mt-1 mt-md-2">
+        <div class="card card-bg mx-3 mb-3 mt-2 mt-md-4">
             <div class="card-body">
                 <h4 class="card-title judul">
                     Unggah Berkas
@@ -43,15 +43,17 @@
                     Status : <span class="badge badge-warning">Belum Terverifikasi</span>
                 {% endif %}
                 <div class="mt-3">
-                    <a class="btn btn-sm btn-secondary" href="{% url 'profile' %}">Kembali</a>
+                    <a class="btn btn-sm btn-outline-secondary" href="/p/">Kembali</a>
                 </div>
             </div>
         </div>
+
 
         <form method="POST" action="" enctype="multipart/form-data">
             {% csrf_token %}
             {% crispy form %}
         </form>
+
 
     </div>
 
