--- a/templates/dashboard/insert_participant.html
+++ b/templates/dashboard/insert_participant.html
@@ -10,6 +10,7 @@
     {{ block.super  }}
     <link rel="stylesheet" href="{% static 'dashboard/css/insert_participant.css' %}" type="text/css" media="screen" />
     <link rel="stylesheet" href="{% static 'css/school-list.css' %}" type="text/css" media="screen" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
 {% endblock head %}
 {% block maindash %}
     <div class="container">
@@ -79,4 +80,8 @@
     <script src="{% static 'dashboard/js/insert_participant.js' %}" type="text/javascript"></script>
     <script src="{% static 'dashboard/js/html2canvas.min.js' %}" type="text/javascript"></script>
     <script type="text/javascript" src="{% static 'js/schoolList.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.16/js/bootstrap-select.min.js"></script>
+    <script type="text/javascript">
+     $('#id_info').selectpicker();
+    </script>
 {% endblock js %}
